trying to fix responsiveness on smallest devices for deployed site

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -35,6 +35,7 @@
 
 @media screen and (max-width: 425px) {
   .footer__links {
+    font-size: 12px;
     padding: 5px;
   }
 }
